Refactoring to sort buggy skip and none selection. Almost done.